gcloud-deployment-config.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: "akkahttpplayground-deployment"
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: "akkahttpplayground-app"
    spec:
      containers:
      - name: "akkahttpplayground-container"
        image: "gcr.io/akkahttp-playground-gcproj/akkahttp-playground:v0.0.2"
        ports:
        - containerPort: 8181
