gcloud-pod-config.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "akkahttpplayground-pod"
  namespace: "default"
spec:
  containers:
    - name: "akkahttpplayground-container"
      image: "gcr.io/akkahttp-playground-gcproj/akkahttp-playground:v0.0.3"
      imagePullPolicy: "Always"
      resources:
        requests:
          memory: "1024Mi"
          cpu: "500m"
        limits:
          memory: "2048Mi"
          cpu: "1000m"
      ports:
        - containerPort: 8181
