gcloud-service-config.yaml
apiVersion: v1
kind: Service
metadata:
  name: "akkahttpplayground-service"
spec:
  selector:
    app: "akkahttpplayground-app"
  ports:
  - port: 8181
    targetPort: 8181
    protocol: TCP
