gcloud-ingress-config.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "akkahttpplayground-ingress"
spec:
  backend:
    serviceName: "akkahttpplayground-service"
    servicePort: 8181
