minikube-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: akkahttpplayground-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: myminikube.info
    http:
      paths:
      - path: /
        backend:
          serviceName: akkahttpplayground-deployment
          servicePort: 8181
